gac_sb/objects/Historique_Segmentation__c.object
<CustomObject>
    <fields>
        <fullName>Interets__c</fullName>
        <label>Intérêts_OLD_V2</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Afrique du Sud</fullName>
                </value>
                <value>
                    <fullName>Albanie</fullName>
                </value>
                <value>
                    <fullName>Algérie</fullName>
                </value>
                <value>
                    <fullName>Allemagne</fullName>
                </value>
                <value>
                    <fullName>Andorre</fullName>
                </value>
                <value>
                    <fullName>Arabie saoudite</fullName>
                </value>
                <value>
                    <fullName>Argentine</fullName>
                </value>
                <value>
                    <fullName>Arménie</fullName>
                </value>
                <value>
                    <fullName>Australie</fullName>
                </value>
                <value>
                    <fullName>Autriche</fullName>
                </value>
                <value>
                    <fullName>Azerbaïdjan</fullName>
                </value>
                <value>
                    <fullName>Bahreïn</fullName>
                </value>
                <value>
                    <fullName>Bangladesh</fullName>
                </value>
                <value>
                    <fullName>Bélarus</fullName>
                </value>
                <value>
                    <fullName>Belgique</fullName>
                </value>
                <value>
                    <fullName>Belize</fullName>
                </value>
                <value>
                    <fullName>Bénin</fullName>
                </value>
                <value>
                    <fullName>Bolivie</fullName>
                </value>
                <value>
                    <fullName>Bosnie-Herzégovine</fullName>
                </value>
                <value>
                    <fullName>Brésil</fullName>
                </value>
                <value>
                    <fullName>Brunei</fullName>
                </value>
                <value>
                    <fullName>Bulgarie</fullName>
                </value>
                <value>
                    <fullName>Burkina Faso</fullName>
                </value>
                <value>
                    <fullName>Cambodge</fullName>
                </value>
                <value>
                    <fullName>Cameroun</fullName>
                </value>
                <value>
                    <fullName>Canada</fullName>
                </value>
                <value>
                    <fullName>Chili</fullName>
                </value>
                <value>
                    <fullName>Chine</fullName>
                </value>
                <value>
                    <fullName>Chypre</fullName>
                </value>
                <value>
                    <fullName>Colombie</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Levee_de_fonds__c</fullName>
        <label>Levée de fonds_OLD_V2</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>+ de 2 ans</fullName>
                </value>
                <value>
                    <fullName>- de 2 ans</fullName>
                </value>
                <value>
                    <fullName>en cours</fullName>
                </value>
                <value>
                    <fullName>prévue</fullName>
                </value>
                <value>
                    <fullName>aucune</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Modification_du_site__c</fullName>
        <label>Modification du site</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Démolition</fullName>
                </value>
                <value>
                    <fullName>Restructuration</fullName>
                </value>
                <value>
                    <fullName>Agrandissement</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Montant_CFE__c</fullName>
        <label>Montant CFE</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Non communiqué</fullName>
                </value>
                <value>
                    <fullName>Inconnu</fullName>
                </value>
                <value>
                    <fullName>0 à 50 k€</fullName>
                </value>
                <value>
                    <fullName>50 à 100 k€</fullName>
                </value>
                <value>
                    <fullName>100 à 150 k€</fullName>
                </value>
                <value>
                    <fullName>150 à 200 k€</fullName>
                </value>
                <value>
                    <fullName>200 à 250 k€</fullName>
                </value>
                <value>
                    <fullName>250 à 300 k€</fullName>
                </value>
                <value>
                    <fullName>300 à 500 k€</fullName>
                </value>
                <value>
                    <fullName>500 à 750 k€</fullName>
                </value>
                <value>
                    <fullName>750 à 1 000 k€</fullName>
                </value>
                <value>
                    <fullName>1 000 à 1 500 k€</fullName>
                </value>
                <value>
                    <fullName>1 500 à 2 000 k€</fullName>
                </value>
                <value>
                    <fullName>&gt; 2 000 k€</fullName>
                </value>
                <value>
                    <fullName>Plafonnée</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Montant_CIR__c</fullName>
        <inlineHelpText>Montant CIR (k€)</inlineHelpText>
        <label>Montant CIR (K€)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Montant_CVAE__c</fullName>
        <label>Montant CVAE</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Non communiqué</fullName>
                </value>
                <value>
                    <fullName>Inconnu</fullName>
                </value>
                <value>
                    <fullName>0 à 50 k€</fullName>
                </value>
                <value>
                    <fullName>50 à 100 k€</fullName>
                </value>
                <value>
                    <fullName>100 à 150 k€</fullName>
                </value>
                <value>
                    <fullName>150 à 200 k€</fullName>
                </value>
                <value>
                    <fullName>200 à 250 k€</fullName>
                </value>
                <value>
                    <fullName>250 à 300 k€</fullName>
                </value>
                <value>
                    <fullName>300 à 500 k€</fullName>
                </value>
                <value>
                    <fullName>500 à 750 k€</fullName>
                </value>
                <value>
                    <fullName>750 à 1 000 k€</fullName>
                </value>
                <value>
                    <fullName>1 000 à 1 500 k€</fullName>
                </value>
                <value>
                    <fullName>1 500 à 2 000 k€</fullName>
                </value>
                <value>
                    <fullName>&gt; 2 000 k€</fullName>
                </value>
                <value>
                    <fullName>Plafonnée</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Montant_TAM__c</fullName>
        <label>Montant TAM</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Montant_TB__c</fullName>
        <label>Montant TB</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Non communiqué</fullName>
                </value>
                <value>
                    <fullName>Inconnu</fullName>
                </value>
                <value>
                    <fullName>Non concerné par la taxe</fullName>
                </value>
                <value>
                    <fullName>0 à 50 k€</fullName>
                </value>
                <value>
                    <fullName>50 à 100 k€</fullName>
                </value>
                <value>
                    <fullName>100 à 150 k€</fullName>
                </value>
                <value>
                    <fullName>150 à 200 k€</fullName>
                </value>
                <value>
                    <fullName>200 à 250 k€</fullName>
                </value>
                <value>
                    <fullName>250 à 300 k€</fullName>
                </value>
                <value>
                    <fullName>300 à 500 k€</fullName>
                </value>
                <value>
                    <fullName>500 à 750 k€</fullName>
                </value>
                <value>
                    <fullName>750 à 1 000 k€</fullName>
                </value>
                <value>
                    <fullName>1 000 à 1 500 k€</fullName>
                </value>
                <value>
                    <fullName>1 500 à 2 000 k€</fullName>
                </value>
                <value>
                    <fullName>&gt; 2 000 k€</fullName>
                </value>
                <value>
                    <fullName>Plafonnée</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Montant_TF__c</fullName>
        <label>Montant TF</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Non communiqué</fullName>
                </value>
                <value>
                    <fullName>Inconnu</fullName>
                </value>
                <value>
                    <fullName>0 à 50 k€</fullName>
                </value>
                <value>
                    <fullName>50 à 100 k€</fullName>
                </value>
                <value>
                    <fullName>100 à 150 k€</fullName>
                </value>
                <value>
                    <fullName>150 à 200 k€</fullName>
                </value>
                <value>
                    <fullName>200 à 250 k€</fullName>
                </value>
                <value>
                    <fullName>250 à 300 k€</fullName>
                </value>
                <value>
                    <fullName>300 à 500 k€</fullName>
                </value>
                <value>
                    <fullName>500 à 750 k€</fullName>
                </value>
                <value>
                    <fullName>750 à 1 000 k€</fullName>
                </value>
                <value>
                    <fullName>1 000 à 1 500 k€</fullName>
                </value>
                <value>
                    <fullName>1 500 à 2 000 k€</fullName>
                </value>
                <value>
                    <fullName>&gt; 2 000 k€</fullName>
                </value>
                <value>
                    <fullName>Plafonnée</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Nombre_de_comptes__c</fullName>
        <formula>Compte__r.Nombre_compte__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Nombre de comptes</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Pourcentage_du_CA_l_export__c</fullName>
        <label>Pourcentage du CA à l&apos;export_OLD_V2</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1-10</fullName>
                </value>
                <value>
                    <fullName>11-20</fullName>
                </value>
                <value>
                    <fullName>21-30</fullName>
                </value>
                <value>
                    <fullName>31-40</fullName>
                </value>
                <value>
                    <fullName>41-50</fullName>
                </value>
                <value>
                    <fullName>51-60</fullName>
                </value>
                <value>
                    <fullName>61-70</fullName>
                </value>
                <value>
                    <fullName>71-80</fullName>
                </value>
                <value>
                    <fullName>81-90</fullName>
                </value>
                <value>
                    <fullName>non communiqué</fullName>
                </value>
                <value>
                    <fullName>inconnu</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Pourcentage_programm_dans_les_5_ans__c</fullName>
        <label>Pourcentage programmé dans les 5 ans_OLD</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1-10</fullName>
                </value>
                <value>
                    <fullName>11-20</fullName>
                </value>
                <value>
                    <fullName>21-30</fullName>
                </value>
                <value>
                    <fullName>31-40</fullName>
                </value>
                <value>
                    <fullName>41-50</fullName>
                </value>
                <value>
                    <fullName>51-60</fullName>
                </value>
                <value>
                    <fullName>61-70</fullName>
                </value>
                <value>
                    <fullName>71-80</fullName>
                </value>
                <value>
                    <fullName>81-90</fullName>
                </value>
                <value>
                    <fullName>non communiqué</fullName>
                </value>
                <value>
                    <fullName>inconnu</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>R_gion_commerciale_Perf_RH__c</fullName>
        <formula>Compte__r.Region_commerciale_Perf_RH__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Région commerciale Perf RH</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Redevable__c</fullName>
        <label>Redevable</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Propriétaire</fullName>
                </value>
                <value>
                    <fullName>Locataire</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Region_commerciale_inno__c</fullName>
        <formula>Compte__r.R_gion_commerciale__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Région commerciale inno</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Service_export__c</fullName>
        <label>Service export_OLD_V2</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Oui</fullName>
                </value>
                <value>
                    <fullName>Non</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TAT_Annees_concernees_concurrent__c</fullName>
        <inlineHelpText>Indiquez les années concernées par le contrat du concurrent en place si vous avez l&apos;information</inlineHelpText>
        <label>TAT Années concernées concurrent</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>2010</fullName>
                </value>
                <value>
                    <fullName>2011</fullName>
                </value>
                <value>
                    <fullName>2012</fullName>
                </value>
                <value>
                    <fullName>2013</fullName>
                </value>
                <value>
                    <fullName>2014</fullName>
                </value>
                <value>
                    <fullName>2015</fullName>
                </value>
                <value>
                    <fullName>2016</fullName>
                </value>
                <value>
                    <fullName>2017</fullName>
                </value>
                <value>
                    <fullName>2018</fullName>
                </value>
                <value>
                    <fullName>2019</fullName>
                </value>
                <value>
                    <fullName>2020</fullName>
                </value>
                <value>
                    <fullName>2005</fullName>
                </value>
                <value>
                    <fullName>2006</fullName>
                </value>
                <value>
                    <fullName>2007</fullName>
                </value>
                <value>
                    <fullName>2008</fullName>
                </value>
                <value>
                    <fullName>2009</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TAT_Autre_Concurrent__c</fullName>
        <label>TAT Autre concurrent</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TAT_Concurrent__c</fullName>
        <inlineHelpText>Indiquez le concurrent en place chez le prospect, utilisez le choix &quot;Autres&quot; si le concurrent n&apos;apparait pas dans la liste, utilisez le choix &quot;Inconnu&quot; si vous n&apos;avez pas l&apos;information</inlineHelpText>
        <label>Gestion du dossier TAT</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Non concerné</fullName>
                </value>
                <value>
                    <fullName>Concurrent non communiqué</fullName>
                </value>
                <value>
                    <fullName>Interne</fullName>
                </value>
                <value>
                    <fullName>GAC</fullName>
                </value>
                <value>
                    <fullName>Adocis</fullName>
                </value>
                <value>
                    <fullName>Ayming (ex Alma et Lowendal)</fullName>
                </value>
                <value>
                    <fullName>Atequacy</fullName>
                </value>
                <value>
                    <fullName>DL Developpement</fullName>
                </value>
                <value>
                    <fullName>Fidal</fullName>
                </value>
                <value>
                    <fullName>Inventage (ex GSM Subventium)</fullName>
                </value>
                <value>
                    <fullName>Leyton</fullName>
                </value>
                <value>
                    <fullName>Lowendal Masai</fullName>
                </value>
                <value>
                    <fullName>Marianne experts</fullName>
                </value>
                <value>
                    <fullName>Prevantis</fullName>
                </value>
                <value>
                    <fullName>Autres</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TAT_Decisionnaire__c</fullName>
        <label>Décisionnaire TAT</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Oui</fullName>
                </value>
                <value>
                    <fullName>Non</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TAT_Enjeux_opportunite__c</fullName>
        <inlineHelpText>Champ obligatoire pour effectuer la demande d&apos;approbation.</inlineHelpText>
        <label>TAT Enjeux Compte</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>ECO</fullName>
                </value>
                <value>
                    <fullName>PREMIUM</fullName>
                </value>
                <value>
                    <fullName>STAR</fullName>
                </value>
                <value>
                    <fullName>Grand compte</fullName>
                </value>
                <value>
                    <fullName>Non communiqué</fullName>
                </value>
                <value>
                    <fullName>Enjeux insuffisants</fullName>
                </value>
                <value>
                    <fullName>Inéligible</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TAT_Montant_IPP__c</fullName>
        <inlineHelpText>Renseignez la valeur en k€</inlineHelpText>
        <label>Montant IPP (k€)_OLD_V2</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TAT_Montant_IT__c</fullName>
        <inlineHelpText>Renseignez la valeur en k€</inlineHelpText>
        <label>Montant IT (k€)_OLD_V2</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TAT_NbIP2__c</fullName>
        <label>Nbre IP2</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TAT_NbIP3__c</fullName>
        <label>Nbre IP3</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TAT_NbIP4__c</fullName>
        <label>Nbre IP4</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TAT_NbIT4__c</fullName>
        <label>Nbre IT4</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TAT_NbIT5__c</fullName>
        <label>Nbre IT5</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TAT_NbIT6__c</fullName>
        <label>Nbre IT6</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TAT_Nb_IPP__c</fullName>
        <label>Nb IPP &gt; 10 %_OLD_V2</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TAT_Nb_IT_20__c</fullName>
        <label>Nb IT &gt; 20 k€_OLD_V2</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TAT_Taux_AT_MP_n_1__c</fullName>
        <label>Taux n-1 (%)</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>TAT_Taux_AT_MP_n__c</fullName>
        <label>Taux n (%)</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Taux_VT__c</fullName>
        <label>Taux VT</label>
        <precision>3</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Taxe_d_amenagement__c</fullName>
        <label>Taxe d&apos;aménagement</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Oui</fullName>
                </value>
                <value>
                    <fullName>Non</fullName>
                </value>
                <value>
                    <fullName>NSP</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Tete_de_groupe__c</fullName>
        <formula>Compte__r.reference_Tete_de_groupe__c</formula>
        <label>Tête de groupe</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Type_de_CIR__c</fullName>
        <label>Type de CIR</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Classique</fullName>
                </value>
                <value>
                    <fullName>Collection</fullName>
                </value>
                <value>
                    <fullName>Jeux vidéo</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Type_de_Credit_d_impot__c</fullName>
        <description>Permet de selectionner le type de Crédit d&apos;impôt</description>
        <label>Type de Crédit d&apos;impôt</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>CIR</fullName>
                </value>
                <value>
                    <fullName>CII</fullName>
                </value>
                <value>
                    <fullName>CIR + CII</fullName>
                </value>
                <value>
                    <fullName>CIR + JEI</fullName>
                </value>
                <value>
                    <fullName>CII + JEI</fullName>
                </value>
                <value>
                    <fullName>CIR + CII + JEI</fullName>
                </value>
                <value>
                    <fullName>Aucun</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Utilisation_du_dispositif_CIR__c</fullName>
        <label>Utilisation du dispositif CIR</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Oui</fullName>
                </value>
                <value>
                    <fullName>Non</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Ville_du_compte__c</fullName>
        <formula>Compte__r.BillingCity</formula>
        <label>Ville du compte</label>
        <type>Text</type>
    </fields>
    <label>Historique Segmentation</label>
    <nameField>
        <label>Nom</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Historiques segmentation</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>CIR_Concurrent_obligatoire</fullName>
        <active>true</active>
        <description>Si le champ Dans le dispositif est égal à oui alors les champs suivants sont obligatoires sur les opportunités CIR :
- Gestion du dossier (concurrent)</description>
        <errorConditionFormula>AND( 
(
ISCHANGED( CIR_Dans_le_dispositif__c ) || ISCHANGED( CIR_Concurrent__c )
),
ISPICKVAL( CIR_Dans_le_dispositif__c , &apos;Oui&apos;), 
ISPICKVAL( CIR_Concurrent__c , &apos;&apos;) 
)</errorConditionFormula>
        <errorMessage>Si le champ &quot;Dans le dispositif&quot; est égal à oui alors les champs suivants sont obligatoires sur les segmentations CIR :
- Gestion du dossier (concurrent)</errorMessage>
    </validationRules>
</CustomObject>